{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 33,
  "lineage": "d3bba765-5d04-067b-e63e-ab215395b4bd",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:network-acl/acl-03c1eb92981c31656",
            "default_network_acl_id": "acl-03c1eb92981c31656",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03c1eb92981c31656",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "442342299380",
            "subnet_ids": [
              "subnet-03e943c8cfb959efc",
              "subnet-07ef4cddde49863fc",
              "subnet-09078b0dfe00a71e7",
              "subnet-0a72100bd16da312c",
              "subnet-0f7c3b378235d39f7",
              "subnet-0fee08dcdb16cbbb9"
            ],
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:route-table/rtb-099cfb06bdc94f5d3",
            "default_route_table_id": "rtb-099cfb06bdc94f5d3",
            "id": "rtb-099cfb06bdc94f5d3",
            "owner_id": "442342299380",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:security-group/sg-0562b71154ef3616f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0562b71154ef3616f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "442342299380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f565083fddb28624",
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:elastic-ip/eipalloc-0f565083fddb28624",
            "domain": "vpc",
            "id": "eipalloc-0f565083fddb28624",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-253-146-171.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.253.146.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b99fe8440cd14d09",
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:elastic-ip/eipalloc-0b99fe8440cd14d09",
            "domain": "vpc",
            "id": "eipalloc-0b99fe8440cd14d09",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-253-192-30.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.253.192.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dadba90470e4f5cb",
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:elastic-ip/eipalloc-0dadba90470e4f5cb",
            "domain": "vpc",
            "id": "eipalloc-0dadba90470e4f5cb",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-66-150-183.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.66.150.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:internet-gateway/igw-07df4653d4a8841b6",
            "id": "igw-07df4653d4a8841b6",
            "owner_id": "442342299380",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f565083fddb28624",
            "association_id": "eipassoc-0873acf78fcb1b085",
            "connectivity_type": "public",
            "id": "nat-05f2a077f8a94c5fe",
            "network_interface_id": "eni-09505f37f5bc06285",
            "private_ip": "10.0.101.121",
            "public_ip": "54.253.146.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7c3b378235d39f7",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b99fe8440cd14d09",
            "association_id": "eipassoc-0fbc30eee0c5e60ef",
            "connectivity_type": "public",
            "id": "nat-0383789396574a676",
            "network_interface_id": "eni-0e0ec76f8522fa7f5",
            "private_ip": "10.0.102.18",
            "public_ip": "54.253.192.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e943c8cfb959efc",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dadba90470e4f5cb",
            "association_id": "eipassoc-0e81c48ad7ae769a0",
            "connectivity_type": "public",
            "id": "nat-0612e36149f49346e",
            "network_interface_id": "eni-00ca8618a46333822",
            "private_ip": "10.0.103.81",
            "public_ip": "54.66.150.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a72100bd16da312c",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-ap-southeast-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb17b369e8c3f32b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05f2a077f8a94c5fe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb17b369e8c3f32b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da978f7647bf78ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0383789396574a676",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da978f7647bf78ea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0176728624191f0461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0612e36149f49346e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0176728624191f046",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07df4653d4a8841b6",
            "id": "r-rtb-004e25ae56a01b2501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004e25ae56a01b250",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:route-table/rtb-0cb17b369e8c3f32b",
            "id": "rtb-0cb17b369e8c3f32b",
            "owner_id": "442342299380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:route-table/rtb-0da978f7647bf78ea",
            "id": "rtb-0da978f7647bf78ea",
            "owner_id": "442342299380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:route-table/rtb-0176728624191f046",
            "id": "rtb-0176728624191f046",
            "owner_id": "442342299380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:route-table/rtb-004e25ae56a01b250",
            "id": "rtb-004e25ae56a01b250",
            "owner_id": "442342299380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b15b5c72443b750",
            "route_table_id": "rtb-0cb17b369e8c3f32b",
            "subnet_id": "subnet-09078b0dfe00a71e7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d37cbe1904cc113a",
            "route_table_id": "rtb-0da978f7647bf78ea",
            "subnet_id": "subnet-07ef4cddde49863fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04299c7350e77ffd5",
            "route_table_id": "rtb-0176728624191f046",
            "subnet_id": "subnet-0fee08dcdb16cbbb9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4f0d218383112b",
            "route_table_id": "rtb-004e25ae56a01b250",
            "subnet_id": "subnet-0f7c3b378235d39f7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c5740345c822859",
            "route_table_id": "rtb-004e25ae56a01b250",
            "subnet_id": "subnet-03e943c8cfb959efc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bb7e1249a5d779e",
            "route_table_id": "rtb-004e25ae56a01b250",
            "subnet_id": "subnet-0a72100bd16da312c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:subnet/subnet-09078b0dfe00a71e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09078b0dfe00a71e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442342299380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:subnet/subnet-07ef4cddde49863fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ef4cddde49863fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442342299380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:subnet/subnet-0fee08dcdb16cbbb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fee08dcdb16cbbb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442342299380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-private-ap-southeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:subnet/subnet-0f7c3b378235d39f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7c3b378235d39f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442342299380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public-ap-southeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public-ap-southeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:subnet/subnet-03e943c8cfb959efc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e943c8cfb959efc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442342299380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public-ap-southeast-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public-ap-southeast-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:subnet/subnet-0a72100bd16da312c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a72100bd16da312c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442342299380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public-ap-southeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc-public-ap-southeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a3150827ba75676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:442342299380:vpc/vpc-06a3150827ba75676",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c1eb92981c31656",
            "default_route_table_id": "rtb-099cfb06bdc94f5d3",
            "default_security_group_id": "sg-0562b71154ef3616f",
            "dhcp_options_id": "dopt-09e63b144b78b1f1c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a3150827ba75676",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099cfb06bdc94f5d3",
            "owner_id": "442342299380",
            "tags": {
              "Environment": "otel-demo",
              "Name": "otel-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "otel-demo",
              "Name": "otel-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}